--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,12 @@ dependencies {
     implementation group: 'io.cucumber', name: 'cucumber-gherkin', version: '7.9.0'
     implementation group: 'io.cucumber', name: 'cucumber-testng', version: '7.9.0'
 
+    implementation group: 'io.qameta.allure', name: 'allure-cucumber7-jvm', version: '2.20.1'
+    implementation group: 'io.qameta.allure', name: 'allure-attachments', version: '2.20.1'
+    implementation group: 'io.qameta.allure', name: 'allure-java-commons', version: '2.20.1'
+    implementation group: 'io.qameta.allure', name: 'allure-testng', version: '2.20.1'
+    implementation group: 'com.github.automatedowl', name: 'allure-environment-writer', version: '1.0.0'
+
 }
 
 configurations {
@@ -47,6 +53,7 @@ tasks.register('runSerial') {
             args = [
                     '--glue', 'com.company.automation.steps',
                     'src/test/resources/features',
+                    '--plugin', 'io.qameta.allure.cucumber7jvm.AllureCucumber7Jvm',
             ]
         }
     }
