--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,5 @@
 app.url=https://www.amazon.in/
-screenshot.path=/screenshots
+screenshot.path=E:\\Workspace\\SBAFramework\\src\\test\\resources\\screenshots
 browser=chrome
 
 implicit.wait=0
