--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,9 +1,9 @@
 app.url=https://www.amazon.in/
 screenshot.path=allure-results
-browser=headless chrome
+browser=chrome
 
 implicit.wait=0
-explicit.wait=10
+explicit.wait=60
 page.timeout=30
 polling.wait=1
 
