--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,7 @@
 app.url=https://www.amazon.in/
 screenshot.path=allure-results
-browser=chrome
+screenshot.after.every.step=false
+browser=headless chrome
 
 implicit.wait=0
 explicit.wait=60
