--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,7 +1,7 @@
 app.url=https://www.amazon.in/
 screenshot.path=allure-results
 screenshot.after.every.step=false
-browser=chrome
+browser=headless chrome
 
 implicit.wait=1
 explicit.wait=30
