--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {      // declarative pipeline
 
     environment {
             fromEmail = "bdkakde@rediffmail.com"
-            recipientEmails = "bdkakde@gmail.com"
+            recipientEmails = "bdkakde@gmail.com, ubkakde@gmail.com"
             APP_NAME = 'Amazon'
         }
     stages
@@ -42,10 +42,11 @@ pipeline {      // declarative pipeline
         }
         post{
               always{
-                      mail to: "bdkakde@gmail.com",
+                      mail to: "${recipientEmails}",
                       subject: "Test Email",
-                      body: "Test"
-                      }
+                      body: "Test",
+                      attachLog: true
+                    }
             }
 
   }
