--- a/jenkinsfile
+++ b/jenkinsfile
@@ -42,7 +42,7 @@ pipeline {      // declarative pipeline
 
         post{
               always{
-              archiveArtifacts artifacts: '*.html', onlyIfSuccessful: false
+              archiveArtifacts artifacts: '*.html', onlyIfSuccessful: false,
                       mail to: "${recipientEmails}",
                       subject: "Test Email",
                       body: "Test",
