--- a/jenkinsfile
+++ b/jenkinsfile
@@ -43,7 +43,7 @@ pipeline {      // declarative pipeline
         post{
               always{
               archiveArtifacts artifacts: '*.html', onlyIfSuccessful: false,
-                      mail to: "${recipientEmails}",
+                      emailext to: "${recipientEmails}",
                       subject: "Test Email",
                       body: "Test",
                       attachmentsPattern: '*.html'
