--- a/jenkinsfile
+++ b/jenkinsfile
@@ -47,6 +47,7 @@ pipeline {      // declarative pipeline
                       subject: "Test Email",
                       body: "Test",
                       attachmentsPattern: '*.html'
+                      cleanWs()
                     }
         }
   }
