--- a/jenkinsfile
+++ b/jenkinsfile
@@ -43,8 +43,8 @@ pipeline {      // declarative pipeline
         post{
               always{
                       mail to: "${recipientEmails}",
-                      subject: "Test Email",
-                      body: "Test"
+                      subject: "jenkins build:${currentBuild.currentResult}: ${env.JOB_NAME}",
+                       body: "${currentBuild.currentResult}: Job ${env.JOB_NAME}\nMore Info can be found here: ${env.BUILD_URL}",
                     }
         }
   }
