--- a/jenkinsfile
+++ b/jenkinsfile
@@ -44,7 +44,7 @@ pipeline {      // declarative pipeline
               always{
                       mail to: "${recipientEmails}",
                       subject: "jenkins build:${currentBuild.currentResult}: ${env.JOB_NAME}",
-                       body: "${currentBuild.currentResult}: Job ${env.JOB_NAME}\nMore Info can be found here: ${env.BUILD_URL}",
+                       body: "${currentBuild.currentResult}: Job ${env.JOB_NAME}\nMore Info can be found here: ${env.BUILD_URL}"
 
                     }
         }
