--- a/jenkinsfile
+++ b/jenkinsfile
@@ -51,14 +51,18 @@ pipeline {      // declarative pipeline
 
             post {
                 failure {
-                    emailext attachmentsPattern: 'allure-report.zip', body: '''${SCRIPT, template="groovy-html.template"}''',
-                            subject: "${env.JOB_NAME} - Build # ${env.BUILD_NUMBER} - Failed",
-                            mimeType: 'text/html',to: "bdkakde@gmail.com"
+                    emailext attachmentsPattern: 'allure-report.zip',
+                            body: "${currentBuild.currentResult}: Job ${env.JOB_NAME}\nMore Info can be found here: ${env.BUILD_URL},
+                            subject: "jenkins build:${currentBuild.currentResult}: ${env.JOB_NAME}",
+                            mimeType: 'text/html',
+                            to: "bdkakde@gmail.com"
                     }
                  success {
-                       emailext attachmentsPattern: 'allure-report.zip', body: '''${SCRIPT, template="groovy-html.template"}''',
-                            subject: "${env.JOB_NAME} - Build # ${env.BUILD_NUMBER} - Successful",
-                            mimeType: 'text/html',to: "bdkakde@gmail.com"
+                       emailext attachmentsPattern: 'allure-report.zip',
+                            body: "${currentBuild.currentResult}: Job ${env.JOB_NAME}\nMore Info can be found here: ${env.BUILD_URL},
+                            subject: "jenkins build:${currentBuild.currentResult}: ${env.JOB_NAME}",
+                            mimeType: 'text/html',
+                            to: "bdkakde@gmail.com"
                   }
             }
   }
