--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,3 +33,6 @@ jobs:
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
         arguments: runSerial
+
+
+# git update-index --chmod=+x gradlew
