--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -4,6 +4,7 @@
 # documentation.
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
+
 # git update-index --chmod=+x gradlew
 
 name: Java CI with Gradle
@@ -24,7 +25,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Test cases execution
+    - name: Setup jdk-17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
@@ -33,6 +34,3 @@ jobs:
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
         arguments: runSerial
-
-
-# git update-index --chmod=+x gradlew
