--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,7 +22,7 @@ jobs:
   build:
 
     #runs-on: ubuntu-latest
-    runs-on: window-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v3
