--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,20 +20,21 @@ permissions:
 
 jobs:
   build:
-
     #runs-on: ubuntu-latest
     #runs-on: windows-latest
     runs-on: macos-latest
-
     steps:
     - uses: actions/checkout@v3
+
     - name: Setup jdk-17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         #distribution: zulu
         distribution: 'adopt'
-    - name: Run Selenium Tests
+
+    - name: Run cucumber Tests
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
         arguments: runSerial
+      continue-on-error: true
