--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,9 +20,9 @@ permissions:
 
 jobs:
   build:
-    #runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
     #runs-on: windows-latest
-    runs-on: macos-latest
+    #runs-on: macos-latest
     steps:
     - uses: actions/checkout@v3
 
