--- a/build.gradle
+++ b/build.gradle
@@ -71,7 +71,7 @@ tasks.register('runSerial') {
             args = [
                     '--glue', 'com.company.automation.steps',
                     'src/test/resources/features/shoppingCart.feature',
-                    //'--tags', '@cart-remove',
+                    '--tags', '@login',
                     '--plugin', 'io.qameta.allure.cucumber7jvm.AllureCucumber7Jvm',
                     '--plugin', 'com.company.automation.listerners.CustomCucumberListener',
             ]
