--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,5 @@
 app.url=https://www.amazon.in/
-screenshot.path=allure-results
+screenshot.path=target/allure-results/screenshots
 screenshot.after.every.step=false
 browser=remote chrome
 
