--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,7 +40,7 @@ jobs:
       continue-on-error: true
 
     - name: Generate Allure report
-      run: ./gradlew allureReport
+      run: ./gradlew target/allure-results
 
     - name: Publish Allure report
       uses: actions/upload-artifact@v2
